--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Vite + Vue 3 + Tailwind CSS</title>
+    <title v-text="meta.title"></title>
 </head>
 <body>
 <div id="app"></div>
