add form as html

--- a/public/form-qweertyudsfnsdddewrfwec.html
+++ b/public/form-qweertyudsfnsdddewrfwec.html
@@ -3,6 +3,7 @@
       data-netlify="true"
       netlify-honeypot="website-field"
       netlify
+      hidden
       class="mt-6 grid grid-cols-1 gap-y-6 sm:grid-cols-2 sm:gap-x-8">
     <input type="hidden" name="form-name" value="contact" />
     <div>
